--- a/public/styles.css
+++ b/public/styles.css
@@ -76,6 +76,17 @@ body {
 
 .icon {
     font-size: 16px;
+    width: 16px;
+    height: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon svg {
+    width: 100%;
+    height: 100%;
+    stroke-width: 2;
 }
 
 .main-content {
