--- a/public/templates/dialogs/edge-search-dialog.html
+++ b/public/templates/dialogs/edge-search-dialog.html
@@ -1,5 +1,5 @@
 <div id="edge-search-dialog" class="dialog hidden">
-    <div class="dialog-content" style="max-width: 500px">
+    <div class="dialog-content edge-dialog-content" style="max-width: 500px">
         <h3>Create Edge</h3>
         <p
             style="
@@ -11,6 +11,7 @@
             Connect distant nodes via search
         </p>
 
+        <div class="edge-dialog-body">
         <!-- Source Node Search -->
         <div style="margin-bottom: 16px">
             <label
@@ -159,6 +160,7 @@
                     font-size: 13px;
                 "
             />
+        </div>
         </div>
 
         <div class="dialog-buttons">
