--- a/public/templates/toolbar.html
+++ b/public/templates/toolbar.html
@@ -112,5 +112,16 @@
             <i data-lucide="trash-2" class="icon"></i>
         </button>
     </div>
+
+    <div class="toolbar-section">
+        <button
+            id="calculate-centralities-btn"
+            class="tool-btn"
+            title="Calculate Centralities"
+        >
+            <i data-lucide="bar-chart-3" class="icon"></i>
+            <span>Analyze</span>
+        </button>
+    </div>
 </div>
 
