--- a/public/templates/dialogs/settings-dialog.html
+++ b/public/templates/dialogs/settings-dialog.html
@@ -1,5 +1,5 @@
 <div id="settings-dialog" class="dialog hidden">
-    <div class="dialog-content" style="max-width: 600px">
+    <div class="dialog-content settings-dialog-content" style="max-width: 600px">
         <h3>Settings</h3>
         
         <!-- Tab Navigation -->
@@ -23,6 +23,7 @@
             </button>
         </div>
 
+        <div class="settings-dialog-body">
         <!-- Fonts Tab Content -->
         <div id="settings-content-fonts" class="settings-tab-content">
             <div style="margin-bottom: 20px">
@@ -178,6 +179,7 @@
                     <span>20px</span>
                 </div>
             </div>
+        </div>
         </div>
 
         <div class="dialog-buttons">
