--- a/public/templates/toolbar.html
+++ b/public/templates/toolbar.html
@@ -112,5 +112,16 @@
             <i data-lucide="trash-2" class="icon"></i>
         </button>
     </div>
+
+    <div class="toolbar-section">
+        <button
+            id="semantic-map-btn"
+            class="tool-btn"
+            title="Semantic Map"
+        >
+            <i data-lucide="layout-template" class="icon"></i>
+            <span>Semantic Map</span>
+        </button>
+    </div>
 </div>
 
